--- a/productos.html
+++ b/productos.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Merakilandia</title>
+    <link rel="icon" href="img/logo.PNG">
 
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="data/datos.json" />
