--- a/index.html
+++ b/index.html
@@ -17,17 +17,6 @@
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
 
-    <link href="~/Content/DataTables-1.10.11/media/css/dataTables.bootstrap.min.css" rel="stylesheet" />
-    <link href="~/Content/DataTables-1.10.11/extensions/Responsive/css/responsive.bootstrap.min.css" rel="stylesheet" />
-
-    <script src="~/Scripts/jquery-2.2.2.min.js"></script>
-    <script src="~/Scripts/DataTables-1.10.11/media/js/jquery.dataTables.min.js"></script>
-    <script src="~/Scripts/DataTables-1.10.11/media/js/dataTables.bootstrap.min.js"></script>
-    <script src="~/Scripts/DataTables-1.10.11/extensions/Responsive/js/dataTables.responsive.min.js"></script>
-    <script src="~/Scripts/DataTables-1.10.11/extensions/Responsive/js/responsive.bootstrap.min.js"></script>
-
-
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
@@ -139,16 +128,14 @@
                     <h6 class="text-uppercase font-weight-bold mb-4">Menú</h6>
                     <ul class="list-unstyled mb-0">
                         <li class="mb-2"><a href="index.html" class="text-capitalize text-dark">Inicio</a></li>
-                        <li class="mb-2"><a href="#" class="text-capitalize text-dark">Envios</a></li>
-                        <li class="mb-2"><a href="#" class="text-capitalize text-dark">Productos</a></li>
-                        <li class="mb-2"><a href="#" class="text-capitalize text-dark">Contácto</a></li>
+                        <li class="mb-2"><a href="productos.html" class="text-capitalize text-dark">Productos</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
                     <h6 class="text-uppercase font-weight-bold mb-4">Puntos de envio</h6>
                     <ul class="list-unstyled mb-0">
-                        <li class="mb-2"><a href="#" class="text-capitalize text-dark">Paternal</a></li>
-                        <li class="mb-2"><a href="#" class="text-capitalize text-dark">Villa Raffo</a></li>
+                        <li id="paternal" class="mb-2"><a href="https://goo.gl/maps/LfMe3AJASpqb2nnX7" target="blank" class="text-capitalize text-dark">Paternal</a></li>
+                        <li id="villaRaffo" class="mb-2"><a href="https://goo.gl/maps/akGozQtjBJnSVfgw8" target="blank" class="text-capitalize text-dark">Villa Raffo</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-lg-0">
