--- a/productos.html
+++ b/productos.html
@@ -69,6 +69,7 @@
                     <!-- Precio total -->
                     <p class="text-right">Total: <span id="total"></span>&dollar;</p>
                     <button id="boton-vaciar" class="btn btn-danger">Vaciar</button>
+                    <button id="boton-comprar" class="btn btn-danger">Comprar</button>
                 </aside>
             </div>
         </div>
@@ -97,9 +98,7 @@
                     <h6 class="text-uppercase font-weight-bold mb-4">Menú</h6>
                     <ul class="list-unstyled mb-0">
                         <li class="mb-2"><a href="index.html" class="text-capitalize text-dark">Inicio</a></li>
-                        <li class="mb-2"><a href="#" class="text-capitalize text-dark">Envios</a></li>
-                        <li class="mb-2"><a href="#" class="text-capitalize text-dark">Productos</a></li>
-                        <li class="mb-2"><a href="#" class="text-capitalize text-dark">Contácto</a></li>
+                        <li class="mb-2"><a href="productos.html" class="text-capitalize text-dark">Productos</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
