--- a/productos.html
+++ b/productos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -38,18 +39,21 @@
 
     <link rel="stylesheet" href="https://code.jquery.com/jquery-3.3.1.slim.min.js">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
 </head>
+
 <body>
     <header>
-        
-    
+
+
         <div class="menu">
             <h1>Merakilandia</h1>
             <nav>
-            <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="productos.html">Productos</a></li>
-            </ul>
+                <ul>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="productos.html">Productos</a></li>
+                </ul>
             </nav>
         </div>
     </header>
@@ -57,23 +61,73 @@
     <main>
 
         <div class="container">
-            <div class="row">
-                <!-- Elementos generados a partir del JSON -->
-                <main id="items" class="col-sm-8 row"></main>
-                <!-- Carrito -->
-                <aside class="col-sm-4">
-                    <h2>Carrito</h2>
-                    <!-- Elementos del carrito -->
-                    <ul id="carrito" class="list-group"></ul>
-                    <hr>
-                    <!-- Precio total -->
-                    <p class="text-right">Total: <span id="total"></span>&dollar;</p>
-                    <button id="boton-vaciar" class="btn btn-danger">Vaciar</button>
-                    <button id="boton-comprar" class="btn btn-danger">Comprar</button>
-                </aside>
-            </div>
+            <h2>Carrito</h2>
+            <hr>
+
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Item</th>
+                        <th scope="col">Cantidad</th>
+                        <th scope="col">Acción</th>
+                        <th scope="col">Total</th>
+                    </tr>
+                </thead>
+                <tbody id="items"></tbody>
+                <tfoot>
+                    <tr id="footer">
+                        <th scope="row" colspan="5">Carrito vacío - comience a comprar!</th>
+                    </tr>
+                </tfoot>
+            </table>
+
+            <div class="row" id="cards"></div>
         </div>
+
+        <template id="template-footer">
+            <th scope="row" colspan="2">Total productos</th>
+            <td>10</td>
+            <td>
+                <button class="btn btn-danger btn-sm" id="vaciar-carrito">
+                    vaciar todo
+                </button>
+            </td>
+            <td class="font-weight-bold">$ <span>5000</span></td>
+        </template>
+
+        <template id="template-carrito">
+            <tr>
+                <th scope="row">id</th>
+                <td>Café</td>
+                <td>1</td>
+                <td>
+                    <button class="btn btn-info btn-sm">
+                        +
+                    </button>
+                    <button class="btn btn-danger btn-sm">
+                        -
+                    </button>
+                </td>
+                <td>$ <span>500</span></td>
+            </tr>
+        </template>
+
+        <template id="template-card">
+            <div class="col-12 mb-2 col-md-4">
+                <div class="card">
+                    <img src="" alt="" class="img-card-top">
+                    <div class="card-body">
+                        <h5>Titulo</h5>
+                        <p>precio</p>
+                        <button class="btn btn-dark">Comprar</button>
+                    </div>
+                </div>
+            </div>
+        </template>
     </main>
+
+    <img src="img/" alt="">
 
     <footer class="pink">
         <div class="container py-5">
@@ -113,7 +167,7 @@
                     <p class="text-capitalize mb-4">Precios accesibles, hace tu consulta!</p>
                     <div class="p-1 rounded border">
                         <div class="input-group">
-                            <input type="text" placeholder="Ingresa tu consulta" aria-describedby="button-addon1"
+                            <input id="consulta" type="text" placeholder="Ingresa tu consulta" aria-describedby="button-addon1"
                                 class="form-control border-0 shadow-0">
                             <div class="input-group-append">
                                 <button id="button-addon1" type="submit" class="btn btn-link"><i
@@ -136,4 +190,5 @@
     </footer>
     <script src="main.js"></script>
 </body>
+
 </html>
