--- a/productos.html
+++ b/productos.html
@@ -7,43 +7,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Merakilandia</title>
     <link rel="icon" href="img/logo.PNG">
-
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="data/datos.json" />
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous">
-    </script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-
-
-
-
+        integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
-    </script>
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
-    </script>
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
-    </script>
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    <link rel="stylesheet" href="https://code.jquery.com/jquery-3.3.1.slim.min.js">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
 </head>
 
 <body>
+
+    <div class="background">
+
     <header>
 
 
@@ -58,7 +45,7 @@
         </div>
     </header>
 
-    <main>
+    <main class="prod">
 
         <div class="container">
             <h2>Carrito</h2>
@@ -129,6 +116,8 @@
 
     <img src="img/" alt="">
 
+</div>
+
     <footer class="pink">
         <div class="container py-5">
             <div class="row py-4">
@@ -158,8 +147,10 @@
                 <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
                     <h6 class="text-uppercase font-weight-bold mb-4">Puntos de envio</h6>
                     <ul class="list-unstyled mb-0">
-                        <li class="mb-2"><a href="#" class="text-capitalize text-dark">Paternal</a></li>
-                        <li class="mb-2"><a href="#" class="text-capitalize text-dark">Villa Raffo</a></li>
+                        <li id="paternal" class="mb-2"><a href="https://goo.gl/maps/LfMe3AJASpqb2nnX7" target="blank"
+                                class="text-capitalize text-dark">Paternal</a></li>
+                        <li id="villaRaffo" class="mb-2"><a href="https://goo.gl/maps/akGozQtjBJnSVfgw8" target="blank"
+                                class="text-capitalize text-dark">Villa Raffo</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-lg-0">
@@ -167,11 +158,12 @@
                     <p class="text-capitalize mb-4">Precios accesibles, hace tu consulta!</p>
                     <div class="p-1 rounded border">
                         <div class="input-group">
-                            <input id="consulta" type="text" placeholder="Ingresa tu consulta" aria-describedby="button-addon1"
-                                class="form-control border-0 shadow-0">
+                            <input id="consulta" type="text" placeholder="Ingresa tu consulta"
+                                aria-describedby="button-addon1" class="form-control border-0 shadow-0"
+                                required="required">
                             <div class="input-group-append">
                                 <button id="button-addon1" type="submit" class="btn btn-link"><i
-                                        class="fa fa-paper-plane"></i></button>
+                                        class="fa fa-paper-plane" onclick="enviarConsulta()"></i></button>
                             </div>
                         </div>
                     </div>
@@ -188,7 +180,9 @@
 
 
     </footer>
-    <script src="main.js"></script>
+
+    <script src="js/main.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
 </html>
