tamanos de iconos

--- a/index.html
+++ b/index.html
@@ -114,13 +114,13 @@
                     <ul class="list-inline mt-4">
 
                         <li class="list-inline-item"><a href="https://" target="_blank" title="facebook">
-                            <span><img class="redes" src="img/facebook.png" alt=""></span></a></li>
+                            <span><img class="redes" style="width: 30px;" src="img/facebook.png" alt=""></span></a></li>
                         <li class="list-inline-item"><a href="https://www.instagram.com/merakilandia_/" target="_blank"title="instagram">
-                            <span><img class="redes" src="img/instagram.png" alt=""></span></a></li>
+                            <span><img class="redes" style="width: 30px;" src="img/instagram.png" alt=""></span></a></li>
                         <li class="list-inline-item"><a href="https://" target="_blank" title="youtube">
-                            <span><img class="redes" src="img/youtube.png" alt=""></span></a></li>
+                            <span><img class="redes" style="width: 30px;" src="img/youtube.png" alt=""></span></a></li>
                         <li class="list-inline-item"><a href=" https://" target="_blank" title="whatsapp">
-                            <span><img class="redes" src="img/whatsapp.png" alt=""></span></a></li>
+                            <span><img class="redes" style="width: 30px;" src="img/whatsapp.png" alt=""></span></a></li>
 
                     </ul>
                 </div>
