elimino clase contenedor

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </header>
 
 
-    <main class="contenedor">
+    <main>
 
         <h3>Aros artesanales hechos con porcelana fria y mucha dedicacion</h3>
 
