Se agrega boton de comprar

--- a/productos.html
+++ b/productos.html
@@ -79,6 +79,9 @@
                 <button class="btn btn-danger btn-sm" id="vaciar-carrito">
                     vaciar todo
                 </button>
+                <button class="btn btn-danger btn-sm" id="comprar-productos">
+                    comprar
+                </button>
             </td>
             <td class="font-weight-bold">$ <span>5000</span></td>
         </template>
