links en productos

--- a/productos.html
+++ b/productos.html
@@ -127,13 +127,13 @@
                     <h6 class="text-uppercase font-weight-bold mb-4">Mis redes</h6>
                     <ul class="list-inline mt-4">
 
-                        <li class="list-inline-item"><a href="https://" target="_blank" title="facebook">
+                        <li class="list-inline-item"><a href="https://es-la.facebook.com/" target="_blank" title="facebook">
                             <span><img class="redes" src="img/facebook.png" alt=""></span></a></li>
                         <li class="list-inline-item"><a href="https://www.instagram.com/merakilandia_/" target="_blank"title="instagram">
                             <span><img class="redes" src="img/instagram.png" alt=""></span></a></li>
-                        <li class="list-inline-item"><a href="https://" target="_blank" title="youtube">
+                        <li class="list-inline-item"><a href="https://www.youtube.com/" target="_blank" title="youtube">
                             <span><img class="redes" src="img/youtube.png" alt=""></span></a></li>
-                        <li class="list-inline-item"><a href=" https://" target="_blank" title="whatsapp">
+                        <li class="list-inline-item"><a href=" https://www.whatsapp.com/?lang=es" target="_blank" title="whatsapp">
                             <span><img class="redes" src="img/whatsapp.png" alt=""></span></a></li>
 
                     </ul>
